[metadata]
name = Data Structures and Algorithms 
description = algos
author = Eyob Tadele-Manhardt
license = MIT
license_file = LICENSE 
# platforms = unix, linux, osx, cygwin, win32
# classifers = 
#   Programming Language :: Python :: 3

[options]
packages =
    binary_search
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
binary_search = py.typed

[flake8]
max-line-length = 160